--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,21 +6,22 @@ on:
       - main
 
 permissions:
-  id-token: write
   contents: read
 
 jobs:
   terraform:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Configure AWS Credentials via OIDC
+      - name: Configure AWS Credentials for Bootstrap
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: ${{ secrets.ACTIONS_ROLE_ARN }}
-          aws-region: us-east-1
+          aws-access-key-id:     ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region:            us-east-1
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
