--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -2,10 +2,15 @@ name: Terraform CI/CD
 
 on:
   push:
-    branches:
-      - main
+    paths:
+      - 'infra/terraform/**'
+  pull_request:
+    paths:
+      - 'infra/terraform/**'
+  workflow_dispatch:
 
 permissions:
+  id-token: write
   contents: read
 
 jobs:
@@ -16,22 +21,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Configure AWS Credentials for Bootstrap
+      - name: Configure AWS Credentials via OIDC
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          aws-access-key-id:     ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region:            us-east-1
+          role-to-assume: ${{ secrets.ACTIONS_ROLE_ARN }}
+          aws-region:     us-east-1
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
 
       - name: Terraform Init
-        run: terraform -chdir=infra/terraform init
+        working-directory: infra/terraform
+        run: terraform init
 
       - name: Terraform Plan
-        run: terraform -chdir=infra/terraform plan
+        working-directory: infra/terraform
+        run: terraform plan
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main'
-        run: terraform -chdir=infra/terraform apply -auto-approve
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        working-directory: infra/terraform
+        run: terraform apply -auto-approve
+
